# stark-demo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/: BENCHMARK_REPORT_2026-04-02.md  BENCHMARK_REPORT_2026-04-07.md  BENCHMARK_REPORT_2026-05-13.md
docs/: architecture.md  current-scope.md
scripts/: fmt.sh
src/: accounting.rs  circuit.rs  credential_issuance.rs  dual_fee_runtime.rs  fee_sidecar.rs  hush_gas_runtime.rs  lib.rs  measurement.rs  payment_fixtures.rs  payment_tx.rs  payment_validation.rs  poseidon2.rs  poseidon2_air.rs  provenance_attestation.rs  prover_common.rs  time_window.rs  types.rs  wasm.rs  wasm_support.rs
web/: _headers  _redirects  index.html  package-lock.json  package.json  verify.html  vite.config.js
web/pkg/: README.md  hush_demo_stark.d.ts  hush_demo_stark.js  hush_demo_stark_bg.wasm  hush_demo_stark_bg.wasm.d.ts  package.json
web/public/: llms.txt
web/src/: main.js  verify.js  wallet.css
web/src/api/: wasm-adapter.js
web/src/config/: constants.js  demo-fixtures.js
web/src/lib/: demo-payloads.js  demo-routes.js  formatters.js  renderers.js  walletShell.js
web/src/state/: demo-state.js
web/src/styles/: base.css  wallet.css
web/src/ui/: views.js
