[package]
name = "hush-demo-stark"
version = "0.1.0"
edition = "2021"
description = "STARK circuits for credential-gated private payments"
repository = "https://github.com/hush-network/stark-demo"
license = "MIT"
keywords = ["stark", "zero-knowledge", "privacy", "payments"]
categories = ["cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pinned to last known-good Stwo rev; bump carefully (API is unstable)
stwo = { git = "https://github.com/starkware-libs/stwo.git", rev = "75a6b0ac9bcc7101d8658445dded51923ab2586f", features = ["prover"] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo.git", rev = "75a6b0ac9bcc7101d8658445dded51923ab2586f", package = "stwo-constraint-framework", features = ["prover"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
num-traits = "0.2"
itertools = "0.12"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "lifecycle"
path = "src/bin/lifecycle.rs"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
too_many_arguments = "allow"
needless_range_loop = "allow"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
